# subtool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
lsub/: __init__.py
scripts/: release.sh  set_version_from_tag.py
subtool/: __init__.py  cli.py
